When resuming playback on startup, correctly restore paused state.

Before, we didn't store the state at all, but started to play always.

BUG: 313330
FIXED-IN: 2.8